[metadata]
name = napari-geojson

author = Tim Morello
author_email = tdmorello@gmail.com
url = https://github.com/tdmorello/napari-geojson
license = BSD-3-Clause
description = Read and write geojson files in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/tdmorello/napari-geojson/issues
    Documentation = https://github.com/tdmorello/napari-geojson#README.md
    Source Code = https://github.com/tdmorello/napari-geojson
    User Support = https://github.com/tdmorello/napari-geojson/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    geopandas
    shapely

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-geojson = napari_geojson

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    isort
    mypy
    napari[all]
    pre-commit
    pytest
    pytest-qt
