[metadata]
name = napari_geojson
description = Read and write geojson files in napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdmorello/napari-geojson
author = Tim Morello
author_email = tdmorello@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/tdmorello/napari-geojson/issues
    Documentation = https://github.com/tdmorello/napari-geojson#README.md
    Source Code = https://github.com/tdmorello/napari-geojson
    User Support = https://github.com/tdmorello/napari-geojson/issues

[options]
packages = find:
install_requires =
    geojson
    napari-plugin-engine>=0.1.4
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-geojson = napari_geojson:napari.yaml

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    isort
    mypy
    napari[all]
    pre-commit
    pytest
    pytest-cov
    pytest-qt

[options.package_data]
napari_geojson = napari.yaml

[tool:pytest]
addopts = --cov=napari_geojson --cov-report=html --cov-report=xml

[flake8]
max-line-length = 88
extend-ignore = E203
